--- a/book/wezterm/shell.html
+++ b/book/wezterm/shell.html
@@ -179,19 +179,22 @@
 - Nerd Fontがインストールされ、端末で有効になっていること。
 </code></pre>
 <p>と書いてありますね。</p>
-<p>本来なら「なんかめんどくさそうだな〜」となるところですが安心してください。入ってますよ。</p>
-<p><code>WezTerm</code>には<code>Roboto</code>というフォントがビルトインされているのですが、これが<code>Nerd Font</code>を含んでいるんですね。</p>
-<div id="admonition-google-fonts--robotohttpsfontsgooglecomspecimenroboto" class="admonition note">
+<p>本来なら「なんかめんどくさそうだな〜」となるところですが...、</p>
+<p>なんと❗️<code>WezTerm</code>は既に<code>Nerd Font Symbols Font</code>を持っています❗️</p>
+<div id="admonition-weztermnerdfontshttpswezfurlongorgweztermconfigluaweztermnerdfontshtml" class="admonition note">
 <div class="admonition-title">
-<p><a href="https://fonts.google.com/specimen/Roboto">Google Fonts &gt; Roboto</a></p>
-<p><a class="admonition-anchor-link" href="#admonition-google-fonts--robotohttpsfontsgooglecomspecimenroboto"></a></p>
+<p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/nerdfonts.html">wezterm.nerdfonts</a></p>
+<p><a class="admonition-anchor-link" href="#admonition-weztermnerdfontshttpswezfurlongorgweztermconfigluaweztermnerdfontshtml"></a></p>
 </div>
 <div>
-<p>Designed by Christian Robertson</p>
+<p>WezTerm includes Nerd Font Symbols Font as a default font fallback which means that these
+special symbols are available even without requiring you to use a patched font.</p>
+<p>WezTerm は Nerd Font Symbols Font をデフォルトのフォントのフォールバックとして含んでおり、
+これはパッチされたフォントを使わなくてもこれらの特殊記号が利用可能であることを意味します。</p>
 </div>
 </div>
-<p><code>WezTerm</code>のフォント設定を変えていなければデフォルトで<code>Roboto</code>が使用されているので「安心してください」となるわけです。</p>
-<p>...とは言いつつ、わたしは別のフォントを使っているので<code>3.3 Font</code>で紹介します。</p>
+<p>...とのことなので安心してください。入ってますよ。☺️</p>
+<p>とは言いつつ、わたしは別のフォントを使っているので<code>3.3 Font</code>で紹介したいな〜と思ってます。</p>
 <h2 id="インストール"><a class="header" href="#インストール">インストール</a></h2>
 <p>これは<code>starship</code>の説明通りにやっていけば大丈夫ですね。</p>
 <h3 id="step-1"><a class="header" href="#step-1">Step 1.</a></h3>
