chore: corrected description

--- a/book/wezterm/font.html
+++ b/book/wezterm/font.html
@@ -238,10 +238,10 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </div>
 </div>
 <p>フォントサイズも指定できるので一緒に入れておきましょう。</p>
-<div id="admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml" class="admonition note">
+<div id="admonition-font_sizehttpswezfurlongorgweztermconfigluaconfigfont_sizehtml" class="admonition note">
 <div class="admonition-title">
-<p>https://wezfurlong.org/wezterm/config/lua/config/font_size.html</p>
-<p><a class="admonition-anchor-link" href="#admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml"></a></p>
+<p><a href="https://wezfurlong.org/wezterm/config/lua/config/font_size.html">font_size</a></p>
+<p><a class="admonition-anchor-link" href="#admonition-font_sizehttpswezfurlongorgweztermconfigluaconfigfont_sizehtml"></a></p>
 </div>
 <div>
 <p>Specifies the size of the font, measured in points.</p>
